<resources>
    <string name="main_activity_title">Force Awake(ns) Alarm</string>
    <string name="alarmTime">""</string>
    <string name="alarmLabel">""</string>
    <string name="alarmRepeatDays">""</string>
    <string name="edit_button_clicked_text">Done</string>
    <string name="edit_button_text">Edit</string>
    <string name="time">""</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>
    <string name="label">""</string>
    <string name="alarm_edit_activity_title">Edit Alarm</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="add_alarm_button_text">+</string>
    <string name="delete_button_text">Delete</string>
    <string name="timeText">Time:</string>
    <string name="labelText">Label:</string>
    <string name="repeatDaysText">Repeat:</string>
    <string name="timeEditImageViewDesc">Edit alarm time</string>
    <string name="editLabelImageViewDesc">Edit alarm label</string>
    <string name="repeatDaysEditImageViewDesc">Edit days for alarm repeat</string>
    <string name="existingAlarmDialog">Warning</string>
    <string name="existingAlarmMessage">The alarm you attempted to create conflicts with an existing alarm</string>
    <string name="okayButton">OK</string>
    <string name="labelEditDialog">New label:</string>
    <string name="submitButton">Submit</string>
    <string name="cancelButton">Cancel</string>
    <string name="mathQuestionDialog">Solve:</string>
    <string name="volume">Volume:</string>
    <string name="toneEditButtonDesc">Pick alarm tone</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="difficulty">Difficulty:</string>
    <string name="tone">Tone:</string>
    <string name="expressionDisabledDialog">Expressions disabled</string>
    <string name="expressionDisabledMsg">Enter passcode instead?</string>
    <string name="passcodeDialog">Enter Passcode</string>
    <string name="expressionsEnabled">Expressions</string>
    <string name="snoozeEnabled">Snooze</string>
</resources>
