...
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addAlarmButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickAdd"
                android:text="@string/add_alarm_button_text"
                android:textAlignment="center"
...
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.NavigationView>

    <ListView
        android:id="@+id/mainActivityList"
        android:descendantFocusability="blocksDescendants"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/mainNavigationBar"
        android:divider="?android:attr/dividerHorizontal"
        android:layout_height="match_parent">
...
