...
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickSave"
                android:text="@string/save_button_text"
                android:textAlignment="center"
...
                    android:id="@+id/editAlarmTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4" />

                <ImageView
                    android:id="@+id/timeEditImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/timeEditImageViewDesc"
                    android:onClick="onClickTimeEdit"
                    android:src="@android:drawable/ic_menu_edit" />

...
